<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="facebook_app_id" translatable="false">425200889605289</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb425200889605289</string>

    <string name="facebook_client_token" translatable="false">be5791110e46a23539b7625b09d3c16b</string>
    <string name="maps_google_api" translatable="false">"https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&amp;photo_reference="</string>
    <string name="your_web_client_id" translatable="false">157511151080-i8dqn6e8bljp2rmcr02s1v837i1ml1j2.apps.googleusercontent.com</string>




    <string name="auth_text">Find a nice restaurant and invite your co-workers for lunch!</string>

    <string name="map">Map View</string>
    <string name="list">List View</string>
    <string name="workmate">Workmates</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="type_your_search">Type your search...</string>
    <string name="Restaurant_picture">Restaurant Picture</string>
    <string name="upperscore">-</string>
    <string name="people_icon">People icon</string>
    <string name="restaurantViewTitle">I\'m Hungry!</string>
    <string name="workematesViewTitle">Available workmate</string>

    <string name="restaurant_dtls_iv_header_descrip">Restaurant photo</string>
    <string name="call_restaurant">CALL</string>
    <string name="like_restaurant">LIKE</string>
    <string name="unlike_restaurant">UNLIKE</string>
    <string name="restaurant_website">WEBSITE</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="meters">m</string>

    <string name="googleLogin">Sign in With Google</string>
    <string name="message_field">Enter message here</string>
    <string name="chat_activity_title">Messages</string>
    <string name="chat_iv_description">Receiver picture</string>
    <string name="chat_ib_description">Send icon</string>
    <string name="hasnt_decide_yet"> decide yet</string>
    <string name="is_eating_at"> eating at </string>
    <string name="no_restaurant_selected">No Restaurant Selected</string>
    <string name="no_selected_restaurant">\ hasn\'t\</string>
    <string name="a_restaurant_is_selected">\ is\</string>
    <string name="settings_title">Settings</string>
    <string name="lunch_notification">Lunch notification</string>

    <string name="notification_name">Selected Restaurant Notification</string>
    <string name="notification_description">Send a notification at 12pm with selected restaurant and your workmates going there</string>
    <string name="no_restaurant_selected_notification">No restaurant selected today </string>
    <string name="here_you_eat_notification">Today\'s selected restaurant is : </string>
    <string name="message_is_empty">Message is empty</string>
    <string name="date_time_formater">"dd/MM/yyyy \'at'\ HH:mm"</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="please_enable_notifications">Please enable notifications in the settings to receive them.</string>
    <string name="allow_notification">Allow notifications</string>
    <string name="cancel">Cancel</string>
    <string name="notification_workmates_list">They also eat here :</string>


    <string name="app_logo">Application Logo</string>
    <string name="header_menu_picture">Header menu picture</string>
    <string name="user_picture">User picture</string>
    <string name="small_application_logo">Small Application Logo</string>
    <string name="select_restaurant_button">Select restaurant button</string>
    <string name="workmate_picture">Workmate picture</string>
    <string name="search">Search</string>


</resources>