<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/chat_tv_title"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dominantRed"
        android:gravity="center"
        android:text="@string/chat_activity_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/chat_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_tv_title"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chat_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chat_card_view"
            >

            <ImageView
                android:id="@+id/chat_iv"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/chat_iv_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chat_tv_workmate_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/chat_constraint_layout"
                tools:src="@tools:sample/avatars"
                />

            <TextView
                android:id="@+id/chat_tv_workmate_name"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:gravity="bottom"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/chat_iv"
                app:layout_constraintTop_toTopOf="@id/chat_constraint_layout"
                />

            <!--            <TextView-->
            <!--                android:id="@+id/chat_tv_last_message_date"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="20dp"-->
            <!--                android:layout_marginLeft="8dp"-->
            <!--                android:textStyle="bold"-->
            <!--                android:text="tretretre"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toEndOf="@id/chat_iv"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/chat_tv_workmate_name" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/chat_et_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_card_view"
        tools:reverseLayout="true"
        tools:listitem="@layout/chat_itemview"
        />


    <EditText
        android:id="@+id/chat_et_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_corner"
        android:hint="@string/message_field"
        android:inputType="textCapSentences|textAutoCorrect"
        android:imeOptions="actionSend"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chat_ib"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/chat_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/chat_ib_description"
        android:src="@drawable/ic_baseline_send_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chat_et_message"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
