<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.details.RestaurantDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/restaurant_details_app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/restaurant_details_ctl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll">

            <ImageView
                android:id="@+id/restaurant_details_iv_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/restaurant_dtls_iv_header_descrip"
                android:scaleType="centerCrop"
                app:layout_collapseMode="pin"
                tools:src="@tools:sample/avatars" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/restaurant_details_tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dominantRed"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Nom du restaurant" />

            <ImageView
                android:id="@+id/restaurant_details_iv_star1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dominantRed"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                app:layout_constraintStart_toEndOf="@id/restaurant_details_tv_name"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_gold_star_rate_24" />

            <ImageView
                android:id="@+id/restaurant_details_iv_star2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dominantRed"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/restaurant_details_iv_star1"
                app:srcCompat="@drawable/ic_baseline_gold_star_rate_24" />

            <ImageView
                android:id="@+id/restaurant_details_iv_star3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dominantRed"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/restaurant_details_iv_star2"
                app:srcCompat="@drawable/ic_baseline_gold_star_rate_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dominantRed"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/restaurant_details_iv_star3"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <TextView
                android:id="@+id/restaurant_details_tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dominantRed"
                android:paddingStart="8dp"
                android:paddingBottom="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_details_tv_name"
                tools:text="adresse du restaurant" />

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/restaurant_details_tv_address">

                <Button
                    android:id="@+id/restaurant_details_bt_call"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="32dp"
                    android:backgroundTint="@color/white"
                    android:drawableTop="@drawable/ic_baseline_phone_24"
                    android:paddingTop="8dp"
                    android:text="@string/call_restaurant"
                    android:textColor="@color/dominantRed" />

                <Button
                    android:id="@+id/restaurant_details_bt_like"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:drawableTop="@drawable/ic_baseline_red_star_rate_24"
                    android:paddingTop="8dp"
                    android:text="@string/like_restaurant"
                    android:textColor="@color/dominantRed"

                    />

                <Button
                    android:id="@+id/restaurant_details_bt_website"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="32dp"
                    android:backgroundTint="@color/white"
                    android:drawableTop="@drawable/ic_globe_24"
                    android:paddingTop="8dp"
                    android:text="@string/restaurant_website"
                    android:textColor="@color/dominantRed" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/workmates_Rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/frame"
                tools:listitem="@layout/workmates_itemview" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restaurant_details_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:tint="@color/white"
        app:layout_anchor="@id/restaurant_details_app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_check_circle_outline_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>